--- a/contract-samples/package.json
+++ b/contract-samples/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.3.2",
     "@truffle/hdwallet-provider": "^1.5.1",
-    "truffle-hdwallet-provider": "^1.0.17"
+    "truffle-hdwallet-provider": "^1.0.17",
+    "web3": "^1.6.0"
   },
   "devDependencies": {},
   "scripts": {
