--- a/contract-samples/package.json
+++ b/contract-samples/package.json
@@ -12,7 +12,9 @@
     "truffle-hdwallet-provider": "^1.0.17",
     "web3": "^1.6.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "hardhat": "^2.8.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
