--- a/contract-samples/package.json
+++ b/contract-samples/package.json
@@ -8,7 +8,15 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.3.2",
+    "@remix-project/remix-debug": "^0.5.9",
+    "@truffle/compile-solidity": "^6.0.8",
+    "@truffle/debugger": "^9.2.11",
     "@truffle/hdwallet-provider": "^1.5.1",
+    "fs-extra": "^10.0.0",
+    "ganache": "^6.4.5",
+    "ganache-core": "^2.13.2",
+    "install": "^0.13.0",
+    "npm": "^8.3.1",
     "truffle-hdwallet-provider": "^1.0.17",
     "web3": "^1.6.0"
   },
